12 September 2005 Sylvain Pion
- Remove operator()() for default constructors.

7 September 2005 Andreas Fabri
- Moved implementation of insert/extract operator to Point_2, Line_2, Circle_2

6 August 2005 Sylvain Pion
- Replace FT(0) by 0, and similar.
- Propagate uncertainty in low level FT predicates.

6 August 2005 Sylvain Pion
- Remove <FT> qualification for functions part of the NT interface
  (sign, compare...), for efficiency.
- Add <FT> qualification for functions which are not part of the
  NT interface (det3x3_by_formula...) to support GMP++ like types.

1 August 2005 Sylvain Pion
- Cartesian_converter : specialize when same_type<K1, K2>.

1 August 2005 Sylvain Pion
- Remove K::make_FT and K::FT_{numerator|denominator}
  (replaced by Rational_traits).

30 July 2005 Sylvain Pion
- Fix Cartesian_converter for Circle_2::orientation().

30 July 2005 Sylvain Pion
- Add some explicit casts to allow Uncertain<>.

29 July 2005 Andreas Fabri
- Added conversion of a vector of Objects in Cartesian_converter.h

26 July 2005 Andreas Fabri
- Removed debug printout in Cartesian_converter.h
- Replaced int with unsigned int in a for loop in Cartesian_converter.h

26 July 2005 Sylvain Pion
- Fix Qualified_result_of<CartesianKernelFunctors::Compute_squared_radius_2<K>,
  typename K::Circle_2 >

26 July 2005 Andreas Fabri
- Added conversion in Cartesian_converter for CGAL::Object with a kernel object inside 

25 July 2005 Andreas Fabri
- Added Qualified_result_of<CartesianKernelFunctors::Compute_squared_radius_2<K>, typename K::Circle_2, int >
- Moved equality test from Vector_2, Point_2 to global_functions

20 July 2005 Andreas Fabri
- Moved Compute_y_2 from Kernel_23 to Cartesian_kernel
- Added qualified_result_type to some functors

24 June 2005 Andreas Fabri
- Removed  #ifndef CGAL_NO_DEPRECATED_CODE for Construct_vector_2 and Construct_direction_2

18 June 2005 Andreas Fabri
- Moved code from Kernel_class_2 to the functors

19 May 2005 Sylvain Pion