@@ -1,3 +1,6 @@
+14 September 2005 Sylvain Pion
+- Remove qualified_result_type from functors.
+
 14 September 2005 Andreas Fabri
 - Specialized functors which were in Kernel_23
 
