@@ -1,3 +1,6 @@
+14 September 2005 Sylvain Pion
+- Remove qualified_result_type from functors.
+
 12 September 2005 Sylvain Pion
 - Remove operator()() for default constructors.
 
